--- a/static/fr/journee_tal_ls/style_journee_ls.css
+++ b/static/fr/journee_tal_ls/style_journee_ls.css
@@ -39,6 +39,17 @@ header {
     text-align:center;
 }
 
+h2{
+    color: var(--primary-color);
+    text-align:center;
+    margin-bottom: 1rem;
+}
+
+h3{
+    text-align:center;
+    margin-bottom: 1rem;
+}
+
 main {
     max-width: 900px;
     margin: 0 auto;
